Se corrigio el error para ver la secion de inventario

--- a/css/diseno_graficas.css
+++ b/css/diseno_graficas.css
@@ -3,6 +3,7 @@
     background: var(--secondary-white);
     border-radius: var(--border-radius);
     padding: 2rem;
+    margin-bottom: 5.5rem;
     box-shadow: var(--shadow);
 }
 
